# CarDealers

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  run.py
app/core/: settings.py
app/models/db/: __init__.py  base.py  dealer.py
app/models/schema/: dealer.py
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 30612ec15caf_init.py
backend/app/: main.py
backend/app/api/routes/: car.py  dealer.py  root.py
backend/app/models/db/: car.py
backend/app/models/schema/: car.py  custom_base_model.py
