[tool.poetry]
name = "CarSale"
version = "0.1.0"
description = ""
authors = ["Evgeny Yanaki"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
pydantic = "^1.8.1"
sqlalchemy = "^1.4.0"
uvicorn = "^0.13.4"
alembic = "^1.5.7"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
